# single_instance_checker

./: CMakeLists.txt  readme.md  single_instance_checker.c
include/: single_instance_checker.h
